HMAN-89 Fix master merge issue - hmctsServiceId to hmctsServiceCode change. Sonarlint/IntelliJ improvements.